--- a/app/button/@spec/page.mdx
+++ b/app/button/@spec/page.mdx
@@ -7,7 +7,7 @@ import imageSrc from '@public/images/button';
 An element that performs an action when clicked.
 :::
 
-<Image src={imageSrc.button.src} alt='button' />
+<Image src={imageSrc.button} alt='button' />
 
 ## Design checklist
 
@@ -32,7 +32,7 @@ An element that performs an action when clicked.
 - **Icon**: An optional visual element that represents the button.
 - **Label**: The text that describes the action the button performs.
 
-<Image src={imageSrc.anatomy.src} alt='anatomy' />
+<Image src={imageSrc.anatomy} alt='anatomy' />
 
 ## States
 
@@ -42,38 +42,38 @@ An element that performs an action when clicked.
 
 - Interaction with the button is available.
 
-<Image src={imageSrc.enabled.src} alt='enabled' />
+<Image src={imageSrc.enabled} alt='enabled' />
 
 ##### Hovered
 
 - The cursor is currently positioned over the button, indicated by a different color shade and the pointer cursor.
 
-<Image src={imageSrc.hovered.src} alt='hovered' />
+<Image src={imageSrc.hovered} alt='hovered' />
 
 ##### Pressed
 
 - The button is being clicked on, indicated by a different color shade.
 
-<Image src={imageSrc.pressed.src} alt='pressed' />
+<Image src={imageSrc.pressed} alt='pressed' />
 
 ##### Focused
 
 - The button is focused via keyboard interaction, indicated by a ring outline.
 
-<Image src={imageSrc.focused.src} alt='focused' />
+<Image src={imageSrc.focused} alt='focused' />
 
 ##### Disabled
 
 - Interaction with the button is disallowed, indicated by a muted appearance and the disallowed cursor.
 
-<Image src={imageSrc.disabled.src} alt='disabled' />
+<Image src={imageSrc.disabled} alt='disabled' />
 
 ##### Pending
 
 - Action assigned to the button is being processed, indicated by an animated spinner and optional labeling.
 - No further interaction is available to the user while the button is in this state.
 
-<Image src={imageSrc.pending.src} alt='pending' />
+<Image src={imageSrc.pending} alt='pending' />
 
 ## Options
 
@@ -84,7 +84,7 @@ An element that performs an action when clicked.
 - **Glass**: Medium-low visual emphasis with a translucent, frosted appearance.
 - **Ghost**: Low visual emphasis with a transparent background.
 
-<Image src={imageSrc.kind.src} alt='kind' />
+<Image src={imageSrc.kind} alt='kind' />
 
 ##### Color
 
@@ -92,25 +92,25 @@ An element that performs an action when clicked.
 - An accent color can be chosen via theme configuration and applied to buttons for enhanced visual emphasis.
 - For actions that are negative or destructive in nature, an adverse color can be used.
 
-<Image src={imageSrc.color.src} alt='color' />
-<Image src={imageSrc.color2.src} alt='color2' />
-<Image src={imageSrc.color3.src} alt='color3' />
+<Image src={imageSrc.color} alt='color' />
+<Image src={imageSrc.color2} alt='color2' />
+<Image src={imageSrc.color3} alt='color3' />
 
 ##### Size
 
 - Small, medium and large buttons differ in container height, minimum width and padding.
 - Medium is the default button size.
 
-<Image src={imageSrc.sizeSmall.src} alt='sizeSmall' />
-<Image src={imageSrc.sizeMedium.src} alt='sizeMedium' />
-<Image src={imageSrc.sizeLarge.src} alt='sizeLarge' />
+<Image src={imageSrc.sizeSmall} alt='sizeSmall' />
+<Image src={imageSrc.sizeMedium} alt='sizeMedium' />
+<Image src={imageSrc.sizeLarge} alt='sizeLarge' />
 
 ##### Icon
 
 - An icon can be added next to the button label.
 - Buttons may also be icon-only.
 
-<Image src={imageSrc.icon.src} alt='icon' />
+<Image src={imageSrc.icon} alt='icon' />
 
 ## Behaviors
 
@@ -118,20 +118,20 @@ An element that performs an action when clicked.
 
 - A minimum width of 2.25× the height of the button ensures that buttons with short labels maintain identifiable shape.
 
-<Image src={imageSrc.minWidth.src} alt='minWidth' />
+<Image src={imageSrc.minWidth} alt='minWidth' />
 
 ##### Alignment
 
 - Content within the button container is always center-aligned.
 - The label text is also center-justified.
 
-<Image src={imageSrc.alignment.src} alt='alignment' />
+<Image src={imageSrc.alignment} alt='alignment' />
 
 ##### Text overflow
 
 - When the button label is too long for the horizontal space available, it wraps to form another line.
 
-<Image src={imageSrc.overflow.src} alt='overflow' />
+<Image src={imageSrc.overflow} alt='overflow' />
 
 ## 🎨 Design Tokens for Button
 
