--- a/app/select/@spec/page.mdx
+++ b/app/select/@spec/page.mdx
@@ -8,7 +8,7 @@ import * as Demo from '../@dev/demo-components';
 A selection field that allows users to choose a single option or multiple options from a dropdown menu.
 :::
 
-<Image src={imageSrc.select.src} alt='select' />
+<Image src={imageSrc.select} alt='select' />
 
 ## Design checklist
 
@@ -39,20 +39,20 @@ A selection field that allows users to choose a single option or multiple option
 - **Chevron**: An optional visual element that indicates the display state of a dropdown menu.
 - **Dropdown menu**: The interactive popover interface where the user are presented with options to select from. It is the [[Menu]] component.
 
-<Image src={imageSrc.anatomy.src} alt='anatomy' />
+<Image src={imageSrc.anatomy} alt='anatomy' />
 
 ### Floating label
 
 - **Floating label**: An optional text label that transitions from an in-field placeholder to a label above the field when focused or filled.
 
-<Image src={imageSrc.anatomy2.src} alt='anatomy2' />
+<Image src={imageSrc.anatomy2} alt='anatomy2' />
 
 ### Multiple selection
 
 - **Selected option tag**: An element which represents the selected option. It is the [[Tag]] component.
 - **Count badge**: An badge which indicates the number of selected options.
 
-<Image src={imageSrc.anatomy3.src} alt='anatomy3' />
+<Image src={imageSrc.anatomy3} alt='anatomy3' />
 
 ## States
 
@@ -64,25 +64,25 @@ A selection field that allows users to choose a single option or multiple option
 
 - Interaction with the select field is available.
 
-<Image src={imageSrc.enabled.src} alt='enabled' />
+<Image src={imageSrc.enabled} alt='enabled' />
 
-<Image src={imageSrc.enabled2.src} alt='enabled2' />
+<Image src={imageSrc.enabled2} alt='enabled2' />
 
 ##### Hovered
 
 - The cursor is currently positioned over the select field, indicated by the text cursor and a slightly different border color.
 
-<Image src={imageSrc.hovered.src} alt='hovered' />
+<Image src={imageSrc.hovered} alt='hovered' />
 
-<Image src={imageSrc.hovered2.src} alt='hovered2' />
+<Image src={imageSrc.hovered2} alt='hovered2' />
 
 ##### Focused
 
 - The select field is focused via keyboard or mouse interaction, indicated by a thickened border.
 
-<Image src={imageSrc.focused.src} alt='focused' />
+<Image src={imageSrc.focused} alt='focused' />
 
-<Image src={imageSrc.focused2.src} alt='focused2' />
+<Image src={imageSrc.focused2} alt='focused2' />
 
 ##### Read-only
 
@@ -90,17 +90,17 @@ A selection field that allows users to choose a single option or multiple option
 
 > [!missing] Missing specification for multi-select
 
-<Image src={imageSrc.readonly.src} alt='readonly' />
+<Image src={imageSrc.readonly} alt='readonly' />
 
-<Image src={imageSrc.readonly2.src} alt='readonly2' />
+<Image src={imageSrc.readonly2} alt='readonly2' />
 
 ##### Disabled
 
 - Interaction with the input field is disallowed, indicated by a muted appearance.
 
-<Image src={imageSrc.disabled.src} alt='disabled' />
+<Image src={imageSrc.disabled} alt='disabled' />
 
-<Image src={imageSrc.disabled2.src} alt='disabled2' />
+<Image src={imageSrc.disabled2} alt='disabled2' />
 
 #### Value states
 
@@ -108,43 +108,43 @@ A selection field that allows users to choose a single option or multiple option
 
 - The field does not contain any input value.
 
-<Image src={imageSrc.unselected.src} alt='unselected' />
+<Image src={imageSrc.unselected} alt='unselected' />
 
-<Image src={imageSrc.unselected2.src} alt='unselected2' />
+<Image src={imageSrc.unselected2} alt='unselected2' />
 
 ##### Selected
 
 - The field contains some input value.
 
-<Image src={imageSrc.selected.src} alt='selected' />
+<Image src={imageSrc.selected} alt='selected' />
 
-<Image src={imageSrc.selected2.src} alt='selected2' />
+<Image src={imageSrc.selected2} alt='selected2' />
 
 ##### Invalid
 
 - The input value does not meet specified criteria, indicated by a red border color and an error message.
 
-<Image src={imageSrc.invalid.src} alt='invalid' />
+<Image src={imageSrc.invalid} alt='invalid' />
 
-<Image src={imageSrc.invalid2.src} alt='invalid2' />
+<Image src={imageSrc.invalid2} alt='invalid2' />
 
 ### Dropdown menu
 
 This sub-component has the same states as [[Menu]].
 
-<Image src={imageSrc.dropdownMenu.src} alt='dropdownMenu' />
+<Image src={imageSrc.dropdownMenu} alt='dropdownMenu' />
 
 ### Clear button
 
 This sub-component has the same states as [[Button]].
 
-<Image src={imageSrc.clearButton.src} alt='clearButton' />
+<Image src={imageSrc.clearButton} alt='clearButton' />
 
 ### Selected option tag
 
 This sub-component has the same states as [[Tag]].
 
-<Image src={imageSrc.selectOptionTag.src} alt='selectOptionTag' />
+<Image src={imageSrc.selectOptionTag} alt='selectOptionTag' />
 
 ## Options
 
@@ -155,18 +155,18 @@ This sub-component has the same states as [[Tag]].
 - Selects are available in default or alternative [[Layering]].
 - The Layering option chosen also affects the dropdown menu.
 
-<Image src={imageSrc.defaultLayer.src} alt='defaultLayer' />
+<Image src={imageSrc.defaultLayer} alt='defaultLayer' />
 
-<Image src={imageSrc.alternative.src} alt='alternative' />
+<Image src={imageSrc.alternative} alt='alternative' />
 
 ##### Size
 
 - Selects are available in small and medium sizes that differ in field height.
 - Medium is the default select size.
 
-<Image src={imageSrc.small.src} alt='small' />
+<Image src={imageSrc.small} alt='small' />
 
-<Image src={imageSrc.medium.src} alt='medium' />
+<Image src={imageSrc.medium} alt='medium' />
 
 ##### Floating label
 
@@ -174,38 +174,38 @@ This sub-component has the same states as [[Tag]].
 - The label is maximized within the middle of the field in the unselected state and the select field has not received focus.
 - The label is minimized and floats towards the top when the select field receives focus.
 
-<Image src={imageSrc.floatingLabel.src} alt='floatingLabel' />
+<Image src={imageSrc.floatingLabel} alt='floatingLabel' />
 
 ##### Placeholder
 
 - A placeholder text can be optionally displayed for the purpose of providing the user a selection hint.
 
-<Image src={imageSrc.placeholder.src} alt='placeholder' />
+<Image src={imageSrc.placeholder} alt='placeholder' />
 
 ##### Clear button
 
 - A clear button can be added to the select field to allow quick clearing of the entered value when clicked.
 
-<Image src={imageSrc.clearButtonOption.src} alt='clearButtonOption' />
+<Image src={imageSrc.clearButtonOption} alt='clearButtonOption' />
 
 ##### Icon
 
 - An icon can be optionally added to the leftmost position within the select field.
 
-<Image src={imageSrc.icon.src} alt='icon' />
+<Image src={imageSrc.icon} alt='icon' />
 
 ##### Multiple selection
 
 - Selects can be optionally configured to allow multiple selections.
 - Selected options are displayed as tags within the select field.
 
-<Image src={imageSrc.multipleSelection.src} alt='multipleSelection' />
+<Image src={imageSrc.multipleSelection} alt='multipleSelection' />
 
 ### Dropdown menu options
 
 The dropdown menu sub-component inherits all available options of the [[Menu#Options|Menu]] component.
 
-<Image src={imageSrc.dropdownMenuOption.src} alt='dropdownMenuOption' />
+<Image src={imageSrc.dropdownMenuOption} alt='dropdownMenuOption' />
 
 ## Behaviors
 
@@ -213,34 +213,34 @@ The dropdown menu sub-component inherits all available options of the [[Menu#Opt
 
 - When there is insufficient space to display all tags of a multiple selection select, tags are replaced with a count badge indicating the number of options currently selected.
 
-<Image src={imageSrc.tagOverflow.src} alt='tagOverflow' />
+<Image src={imageSrc.tagOverflow} alt='tagOverflow' />
 
 > [!missing] Section is incomplete
 
 ## 🎨 Design Tokens for Select
 
-| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
-|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-field-enabled`          | Select field background      | Enabled                   | `select.native-select:enabled` |
-| `--par-color-bg-field-hovered`          | Select field background      | Hovered                   | `select.native-select:hover` |
-| `--par-color-bg-field-disabled`         | Select field background      | Disabled                  | `select.native-select:disabled` |
-| `--par-color-bg-field-readonly`         | Select field background      | Readonly                  | `select.native-select[readonly]` |
-| `--par-color-bg-field-invalid`          | Select field background      | Invalid/Error             | `select.native-select.invalid` |
-| `--par-color-border-field-enabled`      | Select field border          | Enabled                   | `select.native-select:enabled` |
-| `--par-color-border-field-hovered`      | Select field border          | Hovered                   | `select.native-select:hover` |
-| `--par-color-border-field-disabled`     | Select field border          | Disabled                  | `select.native-select:disabled` |
-| `--par-color-border-field-invalid`      | Select field border          | Invalid/Error             | `select.native-select.invalid` |
-| `--par-color-border-field-focused`      | Select field border          | Focused                   | `select.native-select:focus` |
-| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `select.native-select::placeholder`, `.select-input.non-value`, `.select-label` |
-| `--par-color-text-field-filled`         | Select field text            | Filled                    | `select.native-select`, `.select-input` |
-| `--par-color-text-field-label`          | Label text                   | Any                       | `.select-label` |
-| `--par-color-text-field-disabled`       | Select field text            | Disabled                  | `select.native-select:disabled` |
-| `--par-color-text-field-readonly`       | Select field text            | Readonly                  | `select.native-select[readonly]` |
-| `--par-color-text-field-invalid`        | Select field text            | Invalid/Error             | `select.native-select.invalid` |
-| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.arrow-select-btn:enabled`, `.clear-button:enabled` |
-| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.arrow-select-btn:hover`, `.clear-button:hover` |
-| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.arrow-select-btn:active`, `.clear-button:active` |
-| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.arrow-select-btn:disabled`, `.clear-button:disabled` |
+| **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                             |
+| ---------------------------------------- | ---------------------------- | ----------------- | ------------------------------------------------------------------------------- |
+| `--par-color-bg-field-enabled`           | Select field background      | Enabled           | `select.native-select:enabled`                                                  |
+| `--par-color-bg-field-hovered`           | Select field background      | Hovered           | `select.native-select:hover`                                                    |
+| `--par-color-bg-field-disabled`          | Select field background      | Disabled          | `select.native-select:disabled`                                                 |
+| `--par-color-bg-field-readonly`          | Select field background      | Readonly          | `select.native-select[readonly]`                                                |
+| `--par-color-bg-field-invalid`           | Select field background      | Invalid/Error     | `select.native-select.invalid`                                                  |
+| `--par-color-border-field-enabled`       | Select field border          | Enabled           | `select.native-select:enabled`                                                  |
+| `--par-color-border-field-hovered`       | Select field border          | Hovered           | `select.native-select:hover`                                                    |
+| `--par-color-border-field-disabled`      | Select field border          | Disabled          | `select.native-select:disabled`                                                 |
+| `--par-color-border-field-invalid`       | Select field border          | Invalid/Error     | `select.native-select.invalid`                                                  |
+| `--par-color-border-field-focused`       | Select field border          | Focused           | `select.native-select:focus`                                                    |
+| `--par-color-text-field-placeholder`     | Placeholder text             | Any               | `select.native-select::placeholder`, `.select-input.non-value`, `.select-label` |
+| `--par-color-text-field-filled`          | Select field text            | Filled            | `select.native-select`, `.select-input`                                         |
+| `--par-color-text-field-label`           | Label text                   | Any               | `.select-label`                                                                 |
+| `--par-color-text-field-disabled`        | Select field text            | Disabled          | `select.native-select:disabled`                                                 |
+| `--par-color-text-field-readonly`        | Select field text            | Readonly          | `select.native-select[readonly]`                                                |
+| `--par-color-text-field-invalid`         | Select field text            | Invalid/Error     | `select.native-select.invalid`                                                  |
+| `--par-color-icon-field-button-enabled`  | Icon color (button enabled)  | Enabled           | `.arrow-select-btn:enabled`, `.clear-button:enabled`                            |
+| `--par-color-icon-field-button-hovered`  | Icon color (button hovered)  | Hovered           | `.arrow-select-btn:hover`, `.clear-button:hover`                                |
+| `--par-color-icon-field-button-pressed`  | Icon color (button pressed)  | Pressed           | `.arrow-select-btn:active`, `.clear-button:active`                              |
+| `--par-color-icon-field-button-disabled` | Icon color (button disabled) | Disabled          | `.arrow-select-btn:disabled`, `.clear-button:disabled`                          |
 
 > _Note: Select uses the same design tokens as the Input or Dropdown component. See Input/Dropdown documentation for available tokens._
 
@@ -250,21 +250,21 @@ The dropdown menu sub-component inherits all available options of the [[Menu#Opt
 
 ### `<Select />`
 
-| **Prop**          | **Type**                  | **Default** | **Description**                   |
-| ----------------- | ------------------------- | ----------- | --------------------------------- |
-| **options**       | array                     |             | List of options                   |
-| **value**         | string \| number \| array |             | Selected value(s)                 |
-| **onChange**      | function (value)          |             | Callback when value changes       |
+| **Prop**          | **Type**                  | **Default** | **Description**                                                        |
+| ----------------- | ------------------------- | ----------- | ---------------------------------------------------------------------- |
+| **options**       | array                     |             | List of options                                                        |
+| **value**         | string \| number \| array |             | Selected value(s)                                                      |
+| **onChange**      | function (value)          |             | Callback when value changes                                            |
 | **multiselect**   | boolean                   | _false_     | Allow multiple selection (named `multiselect` in code, not `multiple`) |
-| **disabled**      | boolean                   | _false_     | Disable the select                |
-| **placeholder**   | string                    |             | Placeholder text                  |
-| **clearButton**   | boolean                   | _false_     | Show clear button                 |
-| **filterable**    | boolean                   | _false_     | Allow filtering options           |
-| **tagProps**      | object                    |             | Tag props for multi-select (see Tag spec) |
-| **theme**         | string                    | 'default'   | Visual theme ('default' or 'alternative') |
-| **selectSize**    | string                    | 'md'        | Size of select ('sm', 'md')       |
-| **floatingLabel** | string \| ReactNode       |             | Floating label                    |
-| **leftIcon**      | ReactNode                 |             | Icon on the left                  |
-| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input** |
-| **...MenuProps**  | [See Menu](../menu/@spec) |             | Inherits all props from **Menu**  |
-| **...TagProps**   | [See Tag](../tag/@spec)   |             | Inherits all props from **Tag**   |
+| **disabled**      | boolean                   | _false_     | Disable the select                                                     |
+| **placeholder**   | string                    |             | Placeholder text                                                       |
+| **clearButton**   | boolean                   | _false_     | Show clear button                                                      |
+| **filterable**    | boolean                   | _false_     | Allow filtering options                                                |
+| **tagProps**      | object                    |             | Tag props for multi-select (see Tag spec)                              |
+| **theme**         | string                    | 'default'   | Visual theme ('default' or 'alternative')                              |
+| **selectSize**    | string                    | 'md'        | Size of select ('sm', 'md')                                            |
+| **floatingLabel** | string \| ReactNode       |             | Floating label                                                         |
+| **leftIcon**      | ReactNode                 |             | Icon on the left                                                       |
+| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input**                                      |
+| **...MenuProps**  | [See Menu](../menu/@spec) |             | Inherits all props from **Menu**                                       |
+| **...TagProps**   | [See Tag](../tag/@spec)   |             | Inherits all props from **Tag**                                        |
