--- a/app/password-input/@spec/page.mdx
+++ b/app/password-input/@spec/page.mdx
@@ -8,7 +8,7 @@ import * as Demo from '../@dev/demo-components';
 An input field for entering sensitive strings such as passwords with masked visibility.
 :::
 
-<Image src={imageSrc.passwordInput.src} alt='password-input' />
+<Image src={imageSrc.passwordInput} alt='password-input' />
 
 ## Design checklist
 
@@ -38,13 +38,13 @@ An input field for entering sensitive strings such as passwords with masked visi
 - **Password visibility button**: A button that toggles the visibility of the sensitive string.
 - **Clear button**: An optional button that clears the input value.
 
-<Image src={imageSrc.anatomy.src} alt='anatomy' />
+<Image src={imageSrc.anatomy} alt='anatomy' />
 
 ### Floating label
 
 - **Label**: A text label that transitions from an in-field placeholder to a label above the field when focused or filled.
 
-<Image src={imageSrc.anatomy2.src} alt='anatomy2' />
+<Image src={imageSrc.anatomy2} alt='anatomy2' />
 
 ## States
 
@@ -56,33 +56,33 @@ An input field for entering sensitive strings such as passwords with masked visi
 
 - Interaction with the input field is available.
 
-<Image src={imageSrc.enabled.src} alt='enabled' />
+<Image src={imageSrc.enabled} alt='enabled' />
 
-<Image src={imageSrc.enabled2.src} alt='enabled2' />
+<Image src={imageSrc.enabled2} alt='enabled2' />
 
 ##### Hovered
 
 - The cursor is currently positioned over the input field, indicated by the text cursor and a slightly different border color.
 
-<Image src={imageSrc.hovered.src} alt='hovered' />
+<Image src={imageSrc.hovered} alt='hovered' />
 
-<Image src={imageSrc.hovered2.src} alt='hovered2' />
+<Image src={imageSrc.hovered2} alt='hovered2' />
 
 ##### Focused
 
 - The input field is focused via keyboard or mouse interaction, indicated by a thickened border.
 
-<Image src={imageSrc.focused.src} alt='focused' />
+<Image src={imageSrc.focused} alt='focused' />
 
-<Image src={imageSrc.focused2.src} alt='focused2' />
+<Image src={imageSrc.focused2} alt='focused2' />
 
 ##### Read-only
 
 - The input field is not editable, but its content can still be selected.
 
-<Image src={imageSrc.readonly.src} alt='readonly' />
+<Image src={imageSrc.readonly} alt='readonly' />
 
-<Image src={imageSrc.readonly2.src} alt='readonly2' />
+<Image src={imageSrc.readonly2} alt='readonly2' />
 
 ##### Disabled
 
@@ -94,25 +94,25 @@ An input field for entering sensitive strings such as passwords with masked visi
 
 - The field does not contain any input value.
 
-<Image src={imageSrc.empty.src} alt='empty' />
+<Image src={imageSrc.empty} alt='empty' />
 
-<Image src={imageSrc.empty2.src} alt='empty2' />
+<Image src={imageSrc.empty2} alt='empty2' />
 
 ##### Filled
 
 - The field contains some input value.
 
-<Image src={imageSrc.filled.src} alt='filled' />
+<Image src={imageSrc.filled} alt='filled' />
 
-<Image src={imageSrc.filled2.src} alt='filled2' />
+<Image src={imageSrc.filled2} alt='filled2' />
 
 ##### Invalid
 
 - The input value does not meet specified criteria, indicated by a red border color and an error message.
 
-<Image src={imageSrc.invalid.src} alt='invalid' />
+<Image src={imageSrc.invalid} alt='invalid' />
 
-<Image src={imageSrc.invalid2.src} alt='invalid2' />
+<Image src={imageSrc.invalid2} alt='invalid2' />
 
 #### Display states
 
@@ -120,17 +120,17 @@ An input field for entering sensitive strings such as passwords with masked visi
 
 - The sensitive string is displayed as plaintext.
 
-<Image src={imageSrc.plaintext.src} alt='plaintext' />
+<Image src={imageSrc.plaintext} alt='plaintext' />
 
-<Image src={imageSrc.plaintext2.src} alt='plaintext2' />
+<Image src={imageSrc.plaintext2} alt='plaintext2' />
 
 ##### Masked
 
 - The sensitive string is masked by bullet characters.
 
-<Image src={imageSrc.masked.src} alt='masked' />
+<Image src={imageSrc.masked} alt='masked' />
 
-<Image src={imageSrc.masked2.src} alt='masked2' />
+<Image src={imageSrc.masked2} alt='masked2' />
 
 ### Password visibility button
 
@@ -139,17 +139,17 @@ An input field for entering sensitive strings such as passwords with masked visi
 - **Pressed**: The button shows a pressed state.
 - **Disabled**: The button is not interactive and appears muted.
 
-<Image src={imageSrc.passwordVisibilityButton.src} alt='passwordVisibilityButton' />
+<Image src={imageSrc.passwordVisibilityButton} alt='passwordVisibilityButton' />
 
-<Image src={imageSrc.passwordVisibilityButton2.src} alt='passwordVisibilityButton2' />
+<Image src={imageSrc.passwordVisibilityButton2} alt='passwordVisibilityButton2' />
 
 ### Clear button
 
 This sub-component has the same states as [[Button]].
 
-<Image src={imageSrc.clearButton.src} alt='clearButton' />
+<Image src={imageSrc.clearButton} alt='clearButton' />
 
-<Image src={imageSrc.clearButton2.src} alt='clearButton2' />
+<Image src={imageSrc.clearButton2} alt='clearButton2' />
 
 ## Options
 
@@ -157,18 +157,18 @@ This sub-component has the same states as [[Button]].
 
 - Password inputs are available in default or alternative [[Layering]].
 
-<Image src={imageSrc.layerDefault.src} alt='layerDefault' />
+<Image src={imageSrc.layerDefault} alt='layerDefault' />
 
-<Image src={imageSrc.alternative.src} alt='alternative' />
+<Image src={imageSrc.alternative} alt='alternative' />
 
 ##### Size
 
 - Small and medium password inputs differ in field height.
 - Medium is the default password input size.
 
-<Image src={imageSrc.small.src} alt='small' />
+<Image src={imageSrc.small} alt='small' />
 
-<Image src={imageSrc.medium.src} alt='medium' />
+<Image src={imageSrc.medium} alt='medium' />
 
 ##### Floating label
 
@@ -176,34 +176,34 @@ This sub-component has the same states as [[Button]].
 - The label is maximized within the middle of the field when the input value is empty and the input field has not received focus.
 - The label is minimized and floats towards the top when the input field receives focus.
 
-<Image src={imageSrc.floatingLabel.src} alt='floatingLabel' />
+<Image src={imageSrc.floatingLabel} alt='floatingLabel' />
 
 ##### Placeholder
 
 - A placeholder text can be optionally displayed for the purpose of providing the user an input hint.
 
-<Image src={imageSrc.placeholder.src} alt='placeholder' />
+<Image src={imageSrc.placeholder} alt='placeholder' />
 
 ##### Toggle visibility button
 
 - By default, password inputs include a toggle button which displays the sensitive string in plaintext when on and masks it when off.
 - Toggle visibility button can be optionally omitted.
 
-<Image src={imageSrc.toggleVisibilityButton.src} alt='toggleVisibilityButton' />
+<Image src={imageSrc.toggleVisibilityButton} alt='toggleVisibilityButton' />
 
-<Image src={imageSrc.toggleVisibilityButton2.src} alt='toggleVisibilityButton2' />
+<Image src={imageSrc.toggleVisibilityButton2} alt='toggleVisibilityButton2' />
 
 ##### Clear button
 
 - A clear button can be added to the input field to allow quick clearing of the entered value when clicked.
 
-<Image src={imageSrc.clearButtonOption.src} alt='clearButtonOption' />
+<Image src={imageSrc.clearButtonOption} alt='clearButtonOption' />
 
 ##### Icon
 
 - An icon can be optionally added to the leftmost position within the input field.
 
-<Image src={imageSrc.icon.src} alt='icon' />
+<Image src={imageSrc.icon} alt='icon' />
 
 ## Behaviors
 
@@ -215,28 +215,28 @@ The PasswordInput component toggles between masked and plaintext states using th
 
 ## 🎨 Design Tokens for PasswordInput
 
-| **Token**                              | **Color for**                | **State/Meaning**         | **CSS Selector(s)** |
-|---------------------------------------- | ---------------------------- | ------------------------- | ------------------- |
-| `--par-color-bg-field-enabled`          | Input background             | Enabled                   | `.par-input:enabled` |
-| `--par-color-bg-field-hovered`          | Input background             | Hovered                   | `.par-input:hover` |
-| `--par-color-bg-field-disabled`         | Input background             | Disabled                  | `.par-input:disabled` |
-| `--par-color-bg-field-readonly`         | Input background             | Readonly                  | `.par-input[readonly]` |
-| `--par-color-bg-field-invalid`          | Input background             | Invalid/Error             | `.par-input.error-state` |
-| `--par-color-border-field-enabled`      | Input border                 | Enabled                   | `.par-input:enabled` |
-| `--par-color-border-field-hovered`      | Input border                 | Hovered                   | `.par-input:hover` |
-| `--par-color-border-field-disabled`     | Input border                 | Disabled                  | `.par-input:disabled` |
-| `--par-color-border-field-invalid`      | Input border                 | Invalid/Error             | `.par-input.error-state` |
-| `--par-color-border-field-focused`      | Input border                 | Focused                   | `.par-input:focus` |
-| `--par-color-text-field-placeholder`    | Placeholder text             | Any                       | `.par-input::placeholder` |
-| `--par-color-text-field-filled`         | Input text                   | Filled                    | `.par-input` |
-| `--par-color-text-field-label`          | Label text                   | Any                       | `.contained-label` |
-| `--par-color-text-field-disabled`       | Input text                   | Disabled                  | `.par-input:disabled` |
-| `--par-color-text-field-readonly`       | Input text                   | Readonly                  | `.par-input[readonly]` |
-| `--par-color-text-field-invalid`        | Input text                   | Invalid/Error             | `.par-input.error-state` |
-| `--par-color-icon-field-button-enabled` | Icon color (button enabled)  | Enabled                   | `.square-icon:enabled` |
-| `--par-color-icon-field-button-hovered` | Icon color (button hovered)  | Hovered                   | `.square-icon:hover` |
-| `--par-color-icon-field-button-pressed` | Icon color (button pressed)  | Pressed                   | `.square-icon:active` |
-| `--par-color-icon-field-button-disabled`| Icon color (button disabled) | Disabled                  | `.square-icon:disabled` |
+| **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**       |
+| ---------------------------------------- | ---------------------------- | ----------------- | ------------------------- |
+| `--par-color-bg-field-enabled`           | Input background             | Enabled           | `.par-input:enabled`      |
+| `--par-color-bg-field-hovered`           | Input background             | Hovered           | `.par-input:hover`        |
+| `--par-color-bg-field-disabled`          | Input background             | Disabled          | `.par-input:disabled`     |
+| `--par-color-bg-field-readonly`          | Input background             | Readonly          | `.par-input[readonly]`    |
+| `--par-color-bg-field-invalid`           | Input background             | Invalid/Error     | `.par-input.error-state`  |
+| `--par-color-border-field-enabled`       | Input border                 | Enabled           | `.par-input:enabled`      |
+| `--par-color-border-field-hovered`       | Input border                 | Hovered           | `.par-input:hover`        |
+| `--par-color-border-field-disabled`      | Input border                 | Disabled          | `.par-input:disabled`     |
+| `--par-color-border-field-invalid`       | Input border                 | Invalid/Error     | `.par-input.error-state`  |
+| `--par-color-border-field-focused`       | Input border                 | Focused           | `.par-input:focus`        |
+| `--par-color-text-field-placeholder`     | Placeholder text             | Any               | `.par-input::placeholder` |
+| `--par-color-text-field-filled`          | Input text                   | Filled            | `.par-input`              |
+| `--par-color-text-field-label`           | Label text                   | Any               | `.contained-label`        |
+| `--par-color-text-field-disabled`        | Input text                   | Disabled          | `.par-input:disabled`     |
+| `--par-color-text-field-readonly`        | Input text                   | Readonly          | `.par-input[readonly]`    |
+| `--par-color-text-field-invalid`         | Input text                   | Invalid/Error     | `.par-input.error-state`  |
+| `--par-color-icon-field-button-enabled`  | Icon color (button enabled)  | Enabled           | `.square-icon:enabled`    |
+| `--par-color-icon-field-button-hovered`  | Icon color (button hovered)  | Hovered           | `.square-icon:hover`      |
+| `--par-color-icon-field-button-pressed`  | Icon color (button pressed)  | Pressed           | `.square-icon:active`     |
+| `--par-color-icon-field-button-disabled` | Icon color (button disabled) | Disabled          | `.square-icon:disabled`   |
 
 > _Note: PasswordInput uses the same design tokens as the Input component. See Input documentation for available tokens._
 
@@ -248,11 +248,11 @@ The PasswordInput component toggles between masked and plaintext states using th
 
 PasswordInputProps are imported from the component file and extend all props from [Input](../BaseInput) and the native input element.
 
-| **Prop**              | **Type**                  | **Default**  | **Description**                                  |
-| --------------------- | ------------------------- | ------------ | ------------------------------------------------ |
-| **color**             | 'accent' \| 'neutral'     | _'neutral'_  | The color of the eye icon                        |
-| **defaultHidden**     | boolean                   | _true_       | Default state of showing password (masked)       |
-| **...InputProps**     | [See Input](../BaseInput) |              | Inherits all props from **Input**                |
+| **Prop**          | **Type**                  | **Default** | **Description**                            |
+| ----------------- | ------------------------- | ----------- | ------------------------------------------ |
+| **color**         | 'accent' \| 'neutral'     | _'neutral'_ | The color of the eye icon                  |
+| **defaultHidden** | boolean                   | _true_      | Default state of showing password (masked) |
+| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input**          |
 
 > **_Note:_** _PasswordInput_ **inherits** all props from **Input** and the native **input** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
 
